--- a/templates/styles/home.scss
+++ b/templates/styles/home.scss
@@ -47,3 +47,11 @@ p {
   background: $ok-background;
   color: $ok-text;
 }
+
+.last-updated {
+  bottom: 0;
+  font-size: 0.5em;
+  padding: 0 1em;
+  position: absolute;
+  right: 0;
+}
