Update the title of the generated page.
The connotation of 'safe' is not what I was going for, other than really
disliking crowds.

--- a/templates/index.haml
+++ b/templates/index.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title Is Metreon Safe?
+    %title Should I Avoid Metreon?
     %link{ rel: "stylesheet", href: "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" }
     %link{ rel: "stylesheet",  href: "styles/home.css" }
   %body{ :class => "status-#{event.status}" }
