--- a/templates/styles/home.scss
+++ b/templates/styles/home.scss
@@ -37,7 +37,7 @@ p {
   top: 50%;
   left: 50%;
   margin-right: -50%;
-  -webkit-transform: tranlsate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
 
