Make grammar for single dates a bit better.

--- a/templates/status_avoid.haml
+++ b/templates/status_avoid.haml
@@ -2,5 +2,5 @@
   %h1 Avoid!
   %p
     %strong= event.name
-    is going on from #{event.date_range}. It will likely be very crowded in
+    is happening #{event.date_range}. It will likely be very crowded in
     the area.
