--- a/templates/status_warn.haml
+++ b/templates/status_warn.haml
@@ -2,4 +2,4 @@
   %h1 Warning!
   %p
     %strong= event.name
-    is going on from #{event.date_range}. It could be crowded in the area.
+    is happening #{event.date_range}. It could be crowded in the area.
